# omnsecience

./: AGENTS.md  GEOLOCATION_README.md  README.md  TODO.md  advanced_scanner.py  advanced_ui.py  cleanup.py  command_center.py  commandcenter.py  cross_platform_builder.py  enhance_ui.py  exploit_control.py  exploit_engine.py  exploit_scan.py  exploit_target.py  exploitation_techniques.py  final_verification.py  full_scan.py  gui.py  gui_manager.py  gui_panel.py  install_deps.py  install_impacket.py  install_impacket_manual.py  installer.py  kivygui.py  lateral_movement.py  live_command.py  live_scanner.py  live_scanner_display.py  main.py  mobile_gui.py  network_discovery.py  network_domination.py  omni_scan_results.json  omniscan.py  omniscience_auto.py  omniscience_batch_test.py  omniscience_cli.py  omniscience_cli_complete.py  (+28 more)
.local/secondary_skills/ad-creative/: .fingerprint
.local/secondary_skills/ai-recruiter/: .fingerprint
.local/secondary_skills/ai-sdr/: .fingerprint
.local/secondary_skills/ai-secretary/: .fingerprint
.local/secondary_skills/branding-generator/: .fingerprint
.local/secondary_skills/competitive-analysis/: .fingerprint
.local/secondary_skills/content-machine/: .fingerprint
.local/secondary_skills/deep-research/: .fingerprint
.local/secondary_skills/design-thinker/: .fingerprint
.local/secondary_skills/excel-generator/: .fingerprint
.local/secondary_skills/file-converter/: .fingerprint
.local/secondary_skills/flashcard-generator/: .fingerprint
impacket_src/impacket-0.13.0/: PKG-INFO  setup.py
libs/: minismb.py
(+96 files in other folders)
